src/snapshots/tests__general_terms.snap
---
source: src/tests.rs
expression: parsed
---
GeneralTerms(
    [
        Data(
            Variable(
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ),
        ),
    ],
)
