src/snapshots/tests__ignored_then_tptp_input-2.snap
---
source: src/tests.rs
expression: parsed
---
Some(
    Include(
        Include {
            file_name: FileName(
                SingleQuoted(
                    "test",
                ),
            ),
            selection: FormulaSelection(
                None,
            ),
        },
    ),
)
