src/snapshots/tests__ignored_then_tptp_input-3.snap
---
source: src/tests.rs
expression: parsed
---
Include(
    Include {
        file_name: FileName(
            SingleQuoted(
                "test",
            ),
        ),
        selection: FormulaSelection(
            None,
        ),
    },
)
