src/snapshots/tests__include-2.snap
---
source: src/tests.rs
expression: parsed
---
Include(
    Included(
        "test",
    ),
    Some(
        [
            LowerWord(
                "test",
            ),
        ],
    ),
)
