src/snapshots/tests__literal-2.snap
---
source: src/tests.rs
expression: parsed
---
NegatedLiteral(
    Proposition(
        LowerWord(
            "p",
        ),
    ),
)
