src/snapshots/tests__literal-3.snap
---
source: src/tests.rs
expression: parsed
---
EqualityLiteral(
    Infix(
        Equal,
        Functor(
            LowerWord(
                "f",
            ),
            [
                Variable(
                    Variable(
                        "X",
                    ),
                ),
            ],
        ),
        Constant(
            LowerWord(
                "c",
            ),
        ),
    ),
)
