src/snapshots/tests__literal-5.snap
---
source: src/tests.rs
expression: parsed
---
Atomic(
    Defined(
        Infix(
            FofDefinedInfixFormula {
                left: Function(
                    Plain(
                        Function(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "f",
                                    ),
                                ),
                            ),
                            FofArguments(
                                [
                                    Variable(
                                        Variable(
                                            UpperWord(
                                                "X",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ),
                ),
                op: DefinedInfixPred(
                    InfixEquality,
                ),
                right: Function(
                    Plain(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "c",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            },
        ),
    ),
)
