src/snapshots/tests__literal.snap
---
source: src/tests.rs
expression: parsed
---
Literal(
    Proposition(
        LowerWord(
            "p",
        ),
    ),
)
